src/test/ui/span/borrowck-ref-into-rvalue.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/borrowck-ref-into-rvalue.rs:3:11
   |
LL |     match Some("Hello".to_string()) {
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^ creates a temporary which is freed while still in use
...
LL |     }
   |     - temporary value is freed at the end of this statement
LL |     println!("{}", *msg);
   |                    ---- borrow later used here
   |
   = note: consider using a `let` binding to create a longer lived value

error: aborting due to previous error

For more information about this error, try `rustc --explain E0716`.
